# FERRET

./: App.css  Cargo.toml  FERRET_Architecture_Guide.md  Feedback_Prompt.md  Implementation_Issues.md  index.html  package-lock.json  package.json  tauri.conf.json  test_document.txt
ferret_index/: ferret_index.json
src/: App.tsx  cli.rs  file_discovery.rs  lib.rs  main.rs  platform.rs  retry.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  platform.rs
src/analysis/: archives.rs  duplicates.rs  mod.rs
src/extraction/: document.rs
src/file_scanner/: aging.rs  hashing.rs  mod.rs  similarity.rs
src/integrations/: tools.rs
src/io/: mod.rs  network_aware.rs
src/report/: mod.rs
src/search/: engine.rs
test_index/: ferret_index.json
tests/: CLI_Test_Report.md  create_test_data.sh  integration_test.rs  test_cli.sh
tests/test_data/duplicates/: backup.txt  exact_duplicate_1.txt  unique_file.txt
tests/test_data/nightmare_files/: MiXeD_cAsE.txt  file with spaces.txt  file-with-dashes.txt  file_with_underscores.txt  numbers_123.txt  special_chars.txt  very_long_filename_that_should_test_filename_handling_and_normalization_capabilities.txt
tests/test_data/similar_files/: document_final.txt  document_v1.txt  document_v2.txt  report_draft.txt  report_final.txt
