[package]
name = "ferret"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
env_logger = "0.10"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# File system operations
walkdir = "2.3"
ignore = "0.4"

# Search and indexing
# tantivy = "0.21"  # Temporarily disabled due to zstd compilation issues
grep-regex = "0.1"
grep-searcher = "0.1"

# Fuzzy matching
fuzzy-matcher = "0.3"
# simhash = "0.2"  # Temporarily disabled due to API issues

# Document processing
calamine = "0.22"
# lopdf = "0.29"  # Temporarily disabled due to zstd compilation issues
zip = "0.6"
# docx = "0.1"  # Temporarily disabled due to compilation issues

# Hashing
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Progress indication
indicatif = "0.17"

# System utilities
num_cpus = "1.0"
dirs = "5.0"
regex = "1.0"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "processthreadsapi", "winbase", "winnt"] }

# Tauri (for future GUI)
tauri = { version = "1.0", features = ["api-all"], optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
gui = ["tauri"]

[[bin]]
name = "ferret"
path = "src/main.rs"